--- a/S1/index.html
+++ b/S1/index.html
@@ -20,26 +20,21 @@
         <label for="email">Email</label><br>
         <input type="email" id="emailInput">
 
-        <label for="order">Order</label><br>
-        <input type="text" id="orderInput">
+        <!-- <label for="order">Order</label><br>
+        <input type="text" id="orderInput"> -->
 
         <button type="submit" id="submit">Submit</button>
     </form>
 
     <div id="container">
     </div>
+    <hr>
+
 
     <form id="radioForm">
-        <label for="id">ID</label>
-        <input type="radio" id="idRadio" name="arrayForm">
+        <div id="radioContainer">
 
-        <label for="name">Name</label>
-        <input type="radio" id="idName" name="arrayForm">
-
-        <label for="price">Price</label>
-        <input type="radio" id="idPrice" name="arrayForm">
-
-        <button type="submit" id="submitRadio">Submit</button>
+        </div>
     </form>
 
 
